compiler/testData/diagnostics/tests/when/testTask/IncorrectBody.kt
fun foo(x: Boolean) = when (x) {
    <!UNRESOLVED_REFERENCE!>print<!>(x)<!SYNTAX!><!>
}
